# CPQD-Blockchain-S14

./: .clang-format  .clang-tidy  .clangd  .gitignore  LICENSE.md  License.txt  Makefile  README.md  build.sh  meson.build
.github/workflows/: demo.yaml
App/: App.cpp  App.h  App.hpp  meson.build
App/TrustedLibrary/: Libcxx.cpp
Enclave/: Enclave.cpp  Enclave.edl  Enclave.h  Enclave.hpp  Enclave_private_test.pem  meson.build
Enclave/TrustedLibrary/: Libcxx.cpp  Libcxx.edl
vscode/: c_cpp_properties.json  settings.json
